temporary timeline added + base account function

--- a/imports/ui/navbar.html
+++ b/imports/ui/navbar.html
@@ -12,7 +12,10 @@
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Tableau de bord</a></li>
+          <li>
+            <a>{{> loginButtons}}</a>
+          </li>
+          <li><a href="#">Tableau de bord</a></li>
           <li><a href="#">Parametres</a></li>
           <li><a href="#">Profil</a></li>
           <li><a href="#">Support</a></li>
