--- a/imports/ui/main.html
+++ b/imports/ui/main.html
@@ -16,10 +16,13 @@
 	<footer id="chart" class="footer">
 		<div class="container-fluid">
 			<div class="row-fluid">
-				<div class="col-md-6"> hello</div>
-			</div>
-			<div class="row-fluid">
-				<div class="col-md-6"> hello</div>
+				<div class="panel panel-primary nopadding">
+					<div class="panel-heading">
+					<h3 class="panel-title">Calendrier des Sprints</h3>
+					</div>
+					<div class="panel-body" id="timeline">
+					</div>
+				</div>
 			</div>
 		</div>
 	</footer>
