--- a/imports/ui/navbar.html
+++ b/imports/ui/navbar.html
@@ -1,5 +1,4 @@
-<body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
+<template name="navbar"><nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -23,4 +22,4 @@
       </div>
     </div>
   </nav>
-</body> 
+  </template>
