--- a/imports/ui/navbar.html
+++ b/imports/ui/navbar.html
@@ -31,7 +31,7 @@
           {{> editProjectModal id=projectId}}
           {{> removeProjectModal id=projectId}}
           {{/if}}
-          <li><a href="export">Exporter</a></li>
+          <li><a href="/{{projectId}}/export">Exporter</a></li>
           <li><a href="#">Parametres</a></li>
           <li><a href="#">Profil</a></li>
           {{/if}}
